# chat_assistant

./: .dockerignore  .gitignore  Makefile  README.md  Tiltfile  create_api.sh  openapi-spec.yaml  requirements.txt  test-e2e.sh  test-mock-servers.sh
.devcontainer/: devcontainer.json
assistant/: .openapi-generator-ignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  setup.py
assistant/.openapi-generator/: FILES
assistant/docs/: ChatResponse.md  ComponentApi.md  KeyValue.md  SourceDocument.md
assistant/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
assistant/openapi_client/api/: __init__.py  component_api.py
assistant/openapi_client/models/: __init__.py  chat_response.py  source_document.py
assistant/src/: .openapi-generator-ignore
assistant/src/.openapi-generator/: FILES
assistant/src/assistant/: assistant_container.py  component_api_README.md  main.py  security_api.py
assistant/src/assistant/apis/: assistant_api.py  assistant_api_base.py  chat_api.py  chat_api_base.py  models_api.py  models_api_base.py
assistant/src/assistant/component_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
assistant/src/assistant/component_api/api/: __init__.py  component_api.py
assistant/src/assistant/component_api/docs/: ChatResponse.md  ComponentApi.md  Description.md  KeyValue.md  SourceDocument.md
assistant/src/assistant/component_api/models/: __init__.py  chat_response.py  description.py  key_value.py  source_document.py
assistant/src/assistant/component_api/test/: test_chat_response.py  test_component_api.py  test_description.py  test_key_value.py  test_source_document.py
assistant/src/assistant/endpoints/: health_endpoints.py
assistant/src/assistant/health/: __init__.py  health_check_service.py
assistant/src/assistant/impl/: assistant_api.py  compnent_handler.py  component_handler.py  mcp_sampling.py
assistant/src/assistant/impl/apis/: chat_api.py  models_api.py
assistant/src/assistant/impl/dynamic_knowledge/: dummy_knowledge_db.py  knowledge_checker.py  qdrant_knowledge_db.py
assistant/src/assistant/impl/endpoints/: default_assist_endpoint.py  default_get_description_endpoint.py
assistant/src/assistant/impl/graph/: chat_graph.py  graph.py  graph_state.py
assistant/src/assistant/impl/mapper/: knowledge_mapper.py
assistant/src/assistant/impl/middleware/: tool_selector.py
assistant/src/assistant/impl/rephraser/: rephraser.py
assistant/src/assistant/impl/settings/: api_settings.py  component_settings.py  dynamic_knowledge_settings.py  information_settings.py  llm_settings.py  mcp_server_settings.py  ollama_settings.py  openai_settings.py  prompt_settings.py  subagent_settings.py
assistant/src/assistant/interfaces/: knowledge.py  knowledge_db.py
assistant/src/assistant/models/: admin_api_key.py  admin_api_key_owner.py  admin_api_keys_create_request.py  admin_api_keys_delete200_response.py  annotation.py  api_key_list.py  array_of_content_parts_inner.py  assistant_object.py  assistant_object_tool_resources.py  assistant_object_tool_resources_code_interpreter.py  assistant_object_tool_resources_file_search.py  assistant_object_tools_inner.py  assistant_stream_event.py  assistant_supported_models.py  assistant_tools_code.py  assistant_tools_file_search.py  assistant_tools_file_search_file_search.py  assistant_tools_file_search_type_only.py  assistant_tools_function.py  assistants_api_response_format_option.py  assistants_api_tool_choice_option.py  assistants_named_tool_choice.py  assistants_named_tool_choice_function.py  audio_response_format.py  audit_log.py  audit_log_actor.py  audit_log_actor_api_key.py  audit_log_actor_service_account.py  audit_log_actor_session.py  audit_log_actor_user.py  audit_log_api_key_created.py  audit_log_api_key_created_data.py  audit_log_api_key_deleted.py  audit_log_api_key_updated.py  audit_log_api_key_updated_changes_requested.py  audit_log_event_type.py  audit_log_invite_accepted.py  audit_log_invite_sent.py  audit_log_invite_sent_data.py  audit_log_login_failed.py  (+658 more)
assistant/test/: test_chat_response.py  test_component_api.py  test_key_value.py  test_source_document.py
assistant/tests/: conftest.py  fake_chat_model.py  test_assistant_api.py  test_assistants_api.py  test_audio_api.py  test_audit_logs_api.py  test_batch_api.py  test_chat_api.py  test_completions_api.py  test_default_api.py  test_embeddings_api.py  test_files_api.py  test_fine_tuning_api.py  test_health_check_service.py  test_health_endpoints.py  test_images_api.py  test_integration.py  test_invites_api.py  test_knowledge_mapper.py  test_mcp_client_setup.py  test_mcp_sampling.py  test_models_api.py  test_moderations_api.py  test_projects_api.py  test_realtime_api.py  test_responses_api.py  test_settings.py  test_uploads_api.py  test_usage_api.py  test_users_api.py  test_vector_stores_api.py
assistant/tests/graph/: test_chat_graph.py
assistant/tests/rephraser/: test_rephraser.py
components/base-component-api/: .openapi-generator-ignore  README.md  openapi.yaml  pyproject.toml
components/base-component-api/.openapi-generator/: FILES
components/base-component-api/src/base_component_api/: dependency_container.py  main.py  security_api.py
components/base-component-api/src/base_component_api/apis/: component_api.py  component_api_base.py
components/base-component-api/src/base_component_api/endpoints/: act_endpoint.py  answer_endpoint.py  assist_endpoint.py  get_actions_endpoint.py  get_description_endpoint.py  upload_document_endpoint.py
components/base-component-api/src/openapi_server/: main.py
components/base-component-api/tests/: conftest.py  test_component_api.py
components/base-library/: pyproject.toml
components/home-assistant/: Dockerfile  pyproject.toml
components/home-assistant/src/: home_assistant_dependency_container.py  main.py
components/home-assistant/src/impl/: tools.py
components/home-assistant/tests/: conftest.py
components/rag/: Dockerfile  pyproject.toml
components/rag/src/: main.py  rag_dependency_container.py
(+100 files in other folders)
