[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true


[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Melvin Klein"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
base-library = { path = "../components/base-library/" }
inject = "^5.2.1"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
python-multipart = "^0.0.9"
python-dateutil = "^2.9.0.post0"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

