[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.flake8]
exclude= ["src/assistant/models", ".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py"]
statistics = true
show-source = false
max-complexity = 8
max-annotations-complexity = 3
docstring-convention = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true
per-file-ignores = """
  ./src/assistant/impl/settings/prompt_settings.py: E501,W293
  ./src/assistant/apis/models_api.py: B008
  ./src/assistant/apis/chat_api.py: B008
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true
known_local_folder = []


[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Melvin Klein"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic-settings = "^2.4.0"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.4"
pydantic = "^2.9.0"
inject = "^5.2.1"
uvicorn = "^0.35.0"
fastapi = "^0.115.0"
langchain = "^0.3.0"
python-multipart = "^0.0.20"
python-dateutil = "^2.9.0.post0"
langdetect = "^1.0.9"
langchain-mcp-adapters = "^0.1.1"
langgraph = "^0.5.0"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"
pytest = "^8.3.5"
coverage = "^7.8.0"
flake8 = "^7.2.0"
flake8-black = "^0.3.6"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"
flake8-annotations-complexity = "^0.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-pytest-style = "^2.1.0"
pep8-naming = "^0.15.1"
flake8-eol = "^0.0.8"
flake8-exceptions = "^0.0.1a0"
flake8-simplify = "^0.22.0"
flake8-wot = "^0.2.0"
flake8-function-order = "^0.0.5"
flake8-tidy-imports = "^4.10.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

