[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.flake8]
exclude= ["src/assistant/models", "src/assistant/component_api", ".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py"]
statistics = true
show-source = false
max-complexity = 8
max-annotations-complexity = 3
docstring-convention = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704", "WOT001"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true
per-file-ignores = """
  ./src/assistant/impl/settings/prompt_settings.py: E501,W293
  ./src/assistant/apis/models_api.py: B008
  ./src/assistant/apis/chat_api.py: B008
  ./src/assistant/apis/assistant_api.py: B008
  ./tests/*: S101,I252,E800,F841
"""

[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true
known_local_folder = []


[project]
name = "assistant"
version = "0.1.0"
description = ""
authors = [{name = "Melvin Klein"}]
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic-settings>=2.4.0",
  "langchain-openai>=1.1.10",
  "langchain-community>=0.4.1",
  "pydantic>=2.9.0",
  "inject>=5.2.1",
  "uvicorn>=0.38.0",
  "fastapi>=0.135.0",
  "langchain>=1.2.10",
  "python-multipart>=0.0.22",
  "python-dateutil>=2.9.0.post0",
  "langdetect>=1.0.9",
  "langchain-mcp-adapters>=0.1.1",
  "langgraph>=1.0.10",
  "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "debugpy>=1.8.14",
  "pytest>=8.3.5",
  "coverage>=7.8.0",
  "flake8>=7.2.0",
  "flake8-black>=0.4.0",
  "flake8-pyproject>=1.2.3",
  "flake8-quotes>=3.4.0",
  "flake8-bandit>=4.1.1",
  "flake8-bugbear>=25.0.0",
  "flake8-builtins>=3.0.0",
  "flake8-comprehensions>=3.15.0",
  "flake8-eradicate>=1.5.0",
  "flake8-pytest-style>=2.1.0",
  "pep8-naming>=0.15.1",
  "flake8-simplify>=0.30.0",
  "flake8-wot>=0.2.0",
  "flake8-tidy-imports>=4.10.0",
  "black>=25.1.0",
  "isort>=7.0.0",
  "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
