[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true


[tool.poetry]
name = "base-component-api"
version = "0.1.0"
description = ""
authors = ["Melvin Klein"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
base-library = { path = "../base-library/" }
inject = "^5.2.1"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
python-multipart = "^0.0.9"
tracely = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

