[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true


[tool.poetry]
name = "Home Assistant Assistant component"
version = "0.1.0"
description = ""
authors = ["Melvin Klein"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-ollama = "^0.2.0"
base-component-api = { path = "../base-component-api/" }
homeassistant-api = "^4.2.2.post2"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

