[project]
name = "Home Assistant Assistant component"
version = "0.1.0"
description = ""
authors = [{name = "Melvin Klein"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-ollama>=0.2.0",
    # "base-component-api",  # Path dependency: ../base-component-api/
    "homeassistant-api>=4.2.2.post2",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
