[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true


[tool.poetry]
name = "Rag Assistant component"
version = "0.1.0"
description = ""
authors = ["Melvin Klein"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastembed = "^0.3.6"
langchain-ollama = "^0.2.0"
base-component-api = { path = "../base-component-api/" }
langchain-unstructured = "^0.1.5"
unstructured-client = "0.29.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

